--- a/report/w241_final_project_report.Rmd
+++ b/report/w241_final_project_report.Rmd
@@ -33,6 +33,7 @@ library(sandwich) # robust standard errors
 library(stargazer) # reporting formatted results
 library(magrittr) # printing document
 library(pwr) # estimating power
+library(kableExtra)
 ```
 
 ```{r write repeatable functions, include=FALSE, results='hide'}
@@ -164,8 +165,11 @@ We can be assured through the construction of the online tic-tac-toe game and ca
 The average treatment effect (ATE) can be described as the difference in average outcomes in the treatment and control groups. Formally, this is written as:
 
 The difference in average potential outcomes for subjects in the treatment-male group from the average potential outcomes for subjects in the control group:
+
 $E[Y_i(TM=1)|D_i=1] - E[Y_i(T=0)|D_i=0]$
+
 The difference in average potential outcomes for subjects in the treatment-female group from the average potential outcomes for subjects in the control group:
+
 $E[Y_i(TF=1)|D_i=1] - E[Y_i(T=0)|D_i=0]$
 
 Subjects are randomly assigned to treatment and control groups and therefore, there is no selection bias and we can say the ATE is unbiased. The ATE among randomly treated subjects is the same as the ATE among all subjects.  
@@ -188,7 +192,6 @@ d[,'id'] <- c(1:nrow(d))
 colnames(d)[1:5] <-c("timestamp","gender_string","age","email","consent")
 d[, gender:=ifelse(gender_string=='Female',0,1)]
 dim(d)
-#str(d)
 ```
 
 Importantly, we check for any "No" consents. These would be excluded from the study.
@@ -223,14 +226,16 @@ n_male = length(d$age[d$gender==1])
 
 #randomly assign subjects to either treatment or control groups blocking by state
 randomize_blockbygender <- function(){
-  ifelse(d$gender==1,sample(c(rep(0,n_female/2),rep(1,n_female/2))),sample(c(rep(0,n_male/2),rep(1,n_male/2))) )
+  ifelse(d$gender==1,sample(c(rep(0,n_female/2),rep(1,n_female/2))),
+         sample(c(rep(0,n_male/2),rep(1,n_male/2))))
 }
 
 # create treatment assignment variable
 d[,'treatment'] <- randomize_blockbygender()
 
-#Check cross-tab of treatment and gender to observe if more or less equal proportions of gender in each block.
-table(d$gender,d$treatment)
+#Check cross-tab of treatment and gender
+kable(d[,xtabs(~gender+treatment)])
+#kable(table(d$gender,d$treatment))
 ```
 
 
@@ -240,15 +245,15 @@ Split treatment group further into two treatment groups for female `TF` and male
 # assign treatment count variable
 n_treatment = length(d$age[d$treatment==1])
 
-#randomly assign subjects to either two treatment groups (TF and TM) for those with treatment==1
+#randomly assign subjects to either two treatment groups (TF and TM)
 randomize_treatment <- function(){
   ifelse(d$treatment==1,sample(c(rep(0,n_treatment/2),rep(1,n_treatment/2))),0)
 }
 
 d[,'is_treatedmalevoice'] <- randomize_treatment()
 
-#Check cross-tab of treatment and is_treatedmalevoice to observe roughly equal proportions of TM and TF treatments when treatment is assigned
-table(d$is_treatedmalevoice,d$treatment)
+#Check cross-tab of treatment and is_treatedmalevoice
+kable(table(d$is_treatedmalevoice,d$treatment))
 ```
 
 For dataset readability purposes, include a string variable for each subjects assignment: control `C`, treatment with male voice `TM`, and treatment with female voice `TF`.
@@ -273,7 +278,9 @@ assignment.labs <- c("Control", "Treatment-Female Voice", "Treatment-Male Voice"
 names(assignment.labs) <- c("C", "TF", "TM")
 
 ggplot(d,aes(x=gender_string))+stat_count(width = 0.5)+ 
-  facet_grid(~assignment, labeller = labeller(assignment = assignment.labs)) + labs(title = 'Histograms of gender distribution by assignment group')+theme_bw()
+  facet_grid(~assignment, labeller = labeller(assignment = assignment.labs))+
+  labs(title = 'Histograms of gender distribution by assignment group')+
+  theme_bw()
 ```
 
 Although we did not perform block randomization on age, we also examine the balance on age and observe an approximately similar balance, although the group assigned the female audio treatment skewed slightly younger. We did not think this had a meaningful impact on results.
@@ -288,7 +295,9 @@ assignment.labs <- c("Control", "Treatment-Female Voice", "Treatment-Male Voice"
 names(assignment.labs) <- c("C", "TF", "TM")
 
 ggplot(d,aes(x=age))+geom_histogram(bins=30)+ 
-  facet_grid(~assignment, labeller = labeller(assignment = assignment.labs)) + labs(title = 'Histograms of age distribution by assignment group')+theme_bw()
+  facet_grid(~assignment, labeller = labeller(assignment = assignment.labs))+
+  labs(title = 'Histograms of age distribution by assignment group')+
+  theme_bw()
 ```
 
 ## Discussion on Attrition
@@ -315,7 +324,9 @@ assignment_status.labs <- c("Control", "Treatment-Female Voice", "Treatment-Male
 names(assignment_status.labs) <- c("C", "TF", "TM")
 
 ggplot(final_attriters,aes(x=gender))+stat_count(width = 0.5)+ 
-  facet_grid(~assignment_status, labeller = labeller(assignment_status = assignment_status.labs)) + labs(title = 'Histograms of gender distribution by assignment group')+theme_bw()
+  facet_grid(~assignment_status, labeller = labeller(assignment_status = assignment_status.labs))+
+  labs(title = 'Histograms of gender distribution by assignment group')+
+  theme_bw()
 ```
 
 
@@ -329,7 +340,9 @@ assignment_status.labs <- c("Control", "Treatment-Female Voice", "Treatment-Male
 names(assignment_status.labs) <- c("C", "TF", "TM")
 
 ggplot(final_attriters,aes(x=age))+geom_histogram(bins=30)+ 
-  facet_grid(~assignment_status, labeller = labeller(assignment_status = assignment_status.labs)) + labs(title = 'Histograms of age distribution by assignment group')+theme_bw()
+  facet_grid(~assignment_status, labeller = labeller(assignment_status = assignment_status.labs))+
+  labs(title = 'Histograms of age distribution by assignment group')+
+  theme_bw()
 ```
 
 
@@ -349,7 +362,6 @@ In our experiment, the potential outcomes $Y_{i}(d)$ will be assumed to be unaff
 However, non-interference may be violated if people conspire and speak to each other before, or even during game play. There is a remote possibility of a non-interference violation if, for example, subjects who live in the same household or work for the same company receive treatment and discuss the game dynamics among themselves. These subjects living or working together may infer that they are receiving different treatments and change their behavior in game play from what they otherwise would have had they played in isolation. In our study, there are nine subjects belonging to the same company (United Fire Group) and three people living in the same house. Furthermore, there are also five MIDS students that may be taking W241 or may have taken W241 in the past that may infer something implicitly about the treatment. Again, these students may have the possibility of discussing the treatment among themselves. However, given that we have not communicated who the participants are in this study, we can assume that communication among treated students in the experiment is a remote possibility. We can assume no interdependencies in game play strategy and the assignment of one subject has no consequences for outcomes of other subjects.
 
 ## CONSORT
-Make clear who was considered for involvement in your experiment, who was assigned, and whose data will eventually be used. Create a flow diagram following page 439 in FE.
 
 The flow diagram starts with 72 subjects who signed up to participate in the study through outreach through social outlets by researchers. The 72 subjects were randomly allocated into three groups - control (no audio directive), treatment (male audio directive) and treatment (female audio directive) following a blocking design based on subject gender (male or female). Following the block randomization, roughly half of subjects were assigned to control (33 subjects) and the other half assigned to one of the treatment groups (39 subjects). Subjects assigned to treatment were randomly assigned to either the male audio directive treatment and female audio directive treatment (22 assigned to the male audio directive and 17 assigned to the female audio directive). Each subject was sent an email to play the series of tic-tac-toe games under their assigned experimental condition (control or treatment). The game play outcomes related to compliance to the directive, by move and overall compliance will be used for estimating the treatment effects. No attrition occurred in this randomized experiment.  
 
@@ -386,19 +398,28 @@ n_treat = nrow(compliance_rates[compliance_rates$assignment_status!='C'])
 n_treatmale = nrow(compliance_rates[compliance_rates$assignment_status=='TM'])
 n_treatfemale = nrow(compliance_rates[compliance_rates$assignment_status=='TF'])
 
-# compute the power for the overall control and combined treatment groups given the known sample sizes in the study
-pwr.2p2n.test(h = effectsize, n1 = n_control , n2 = n_treat , sig.level = .05, power = NULL )
+# compute the power for the overall control and combined treatment groups
+pwr.2p2n.test(h = effectsize, n1 = n_control , n2 = n_treat , 
+              sig.level = .05, power = NULL )
 
-# compute the power for the overall control and male audio treatment groups given the known sample sizes in the study
-pwr.2p2n.test(h = effectsize, n1 = n_control , n2 = n_treatmale , sig.level = .05, power = NULL )
+# compute the power for the overall control and male audio treatment groups
+pwr.2p2n.test(h = effectsize, n1 = n_control , n2 = n_treatmale , 
+              sig.level = .05, power = NULL )
 
-# compute the power for the overall control and female audio treatment groups given the known sample sizes in the study
-pwr.2p2n.test(h = effectsize, n1 = n_control , n2 = n_treatfemale , sig.level = .05, power = NULL )
+# compute the power for the overall control and female audio treatment groups
+pwr.2p2n.test(h = effectsize, n1 = n_control , n2 = n_treatfemale , 
+              sig.level = .05, power = NULL )
 
 ```
-Following the  power of our study will be `r pwr.2p2n.test(h = effectsize, n1 = n_control , n2 = n_treat , sig.level = .05, power = NULL)$power`, suggesting a moderately-powered experiment.
 
-If we consider the studies with the individual treatment effects (male and female audio) only, and assuming our hypothetical anticipated effect size, the power would have been`r pwr.2p2n.test(h = effectsize, n1 = n_control , n2 = n_treatmale , sig.level = .05, power = NULL)$power` and `r pwr.2p2n.test(h = effectsize, n1 = n_control , n2 = n_treatfemale , sig.level = .05, power = NULL)$power` for the male and female audio treatment studies, respectively.
+```{r}
+round(pwr.2p2n.test(h = effectsize, n1 = n_control , n2 = n_treat , sig.level = .05, power = NULL)$power,1)*100
+```
+
+
+Following the  power of our study will be `r round(pwr.2p2n.test(h = effectsize, n1 = n_control , n2 = n_treat , sig.level = .05, power = NULL)$power,2)*100` percent, suggesting a moderately-powered experiment.
+
+If we consider the studies with the individual treatment effects (male and female audio) only, and assuming our hypothetical anticipated effect size, the power would have been `r round(pwr.2p2n.test(h = effectsize, n1 = n_control , n2 = n_treatmale , sig.level = .05, power = NULL)$power,2)*100` percent and `r round(pwr.2p2n.test(h = effectsize, n1 = n_control , n2 = n_treatfemale , sig.level = .05, power = NULL)$power,2)*100` percent for the male and female audio treatment studies, respectively.
 
 As an exposition, we can visualize power curves below to understand the relationship with effect size and sample size. Intuitively, to achieve an adequately-powered small effect size, we would need larger sample sizes. 
 
@@ -443,7 +464,7 @@ legend("topright", title="Power", as.character(p),
 ```
 
 
-In the actual study, we accounting for attrition, we had just `r nrow(final_compliers)` subjects in the experiment and therefore, could not achieve the power targeted a priori. Moreover, as we discuss in the Results section, our treatment effects were substantially smaller than 0.5. We report the actual power of the experiment in the Results section.
+In the actual study, we accounting for attrition, we had just `r nrow(final_compliers)` subjects in the experiment and therefore, could not achieve the power targeted a priori. Moreover, as we discuss in the Results section, our treatment effects were substantially smaller than 0.5. We report the actual power of the experiment in the Results sub-section "Post-treatment power calculation".
 
 
 
@@ -481,19 +502,23 @@ On completion of five games, the subjects are brought to a final screen which th
 The main model of our analysis investigates the suggested move compliance rate of the subject dependent on whether the subject was in the control or one of the treatment groups. Our models can be expressed formally as:
 
 - Linear model without interaction terms:
+
 $Y = \beta_{1}maleaudio + \beta_{2}femaleaudio + \beta_{3}gender + \beta_{4}age$
 
 - Linear model with interaction terms:
+
 $Y = \beta_{1}maleaudio + \beta_{2}femaleaudio + \beta_{3}gender + \beta_{4}age + \beta_{5}maleaudio*gender + \beta_{6}femaleaudio*gender + \beta_{7}maleaudio*age + \beta_{8}femaleaudio*age$
 
 - Logistic regression model without interaction terms:
+
 $P(Y=1) = \beta_{1}maleaudio + \beta_{2}femaleaudio + \beta_{3}gender + \beta_{4}age$
 
 or expressed in log-odds as:
+
 $LL = ln(\frac{p}{1-p})=\beta_{1}maleaudio + \beta_{2}femaleaudio + \beta_{3}gender + \beta_{4}age$
 
 
-We estimated causal effects using the postulated  models over a sequence of analysis:
+We estimated causal effects using the postulated  models over a sequence of analyses:
 
 - 1. Proportional compliance to suggested moves for all moves 
 - 2. Proportional compliance to suggested moves for optimal and non-optimal suggested moves
@@ -502,6 +527,7 @@ We estimated causal effects using the postulated  models over a sequence of anal
 - 5. Proportional compliance to suggested moves by order of game
 - 6. Proportional compliance to suggested moves by order of move
 
+Each of these estimates causal effects in an attempt to more fully comprehend the dynamic between move suggestions and game play strategy.
 
 ## Model Results
 The regression table below reports the model estimates, first with no covariates, then with additional covariates, robust standard errors, and clustered standard errors We clustered on subject identifier since each subject received one treatment throughout game play.
@@ -552,8 +578,11 @@ coeftest(reg, reg$vvcovCL1_)
 # report the formatted regression results
 stargazer(naive_reg, reg, reg, reg_interaction, reg_interaction,
           type = 'text', 
-          se=list(naive_reg$robustse, reg$robustse, reg$cluster1se, reg_interaction$robustse, reg_interaction$cluster1se),
-          add.lines = list(c('SE', 'Robust', 'Robust', 'Clustered', 'Robust', 'Clustered')),
+          se=list(naive_reg$robustse, reg$robustse, reg$cluster1se,
+                  reg_interaction$robustse, reg_interaction$cluster1se),
+          add.lines = list(c('SE', 'Robust', 'Robust', 'Clustered', 
+                             'Robust', 'Clustered')),
+          no.space = TRUE,align=TRUE,table.placement="H",
           header=F)
 ```
 
@@ -586,7 +615,7 @@ t_test_result_t <- t.test(final_tm, final_tf)
 t_test_result_t
 ```
 
-Consistent with the regression results, we observe that the treatment effect for the male voice and female voice treatments are statistically different from zero with a p-value in the t-test of `r t_test_result_tm$p.value` and `r t_test_result_tf$p.value`, respectively. The effect between the gendered voice treatments is statistically insignificant with a p-value in the t-test of `r t_test_result_t$p.value`.  
+Consistent with the regression results, we observe that the treatment effect for the male voice and female voice treatments are statistically different from zero with a p-value in the t-test of `r round(t_test_result_tm$p.value,4)` and `r round(t_test_result_tf$p.value,4)`, respectively. The effect between the gendered voice treatments is statistically insignificant with a p-value in the t-test of `r round(t_test_result_t$p.value,4)`.  
 
 ## Evaluation of compliance with suggestions on a move-by-move basis
 
@@ -612,16 +641,19 @@ nrow(all_moves_nonoptimal)
 # report the formatted regression results
 stargazer(logistic_reg(data=all_moves), logistic_reg(data=all_moves),
           type = 'text', 
-          se = list(robust_se(logistic_reg(data=all_moves)), cluster_se(logistic_reg(data=all_moves),all_moves)),
-          add.lines = list(c('Fixed Effects','Yes','Yes'),c('SE', 'Robust', 'Clustered')),
+          se = list(robust_se(logistic_reg(data=all_moves)), 
+                    cluster_se(logistic_reg(data=all_moves),all_moves)),
+          add.lines = list(c('Fixed Effects','Yes','Yes'),
+                           c('SE', 'Robust', 'Clustered')),
           omit.stat = c('ser', 'F'),
           omit = c("subject_id"),
+          no.space = TRUE,align=TRUE,table.placement="H",
           header=F)
 
 ```
 
 
-Exponentiating the coefficients, we can interpret the likelihoods of compliance with suggested moves as odds-ratios. We find that the female audio treatment effect increases odds of compliance with a suggested move by an infinite factor `r exp(coef(logistic_reg(all_moves))[2])`, controlling for covariates and fixed effects. The male audio treatment effect increases odds of compliance with a suggested move by a factor of `r exp(coef(logistic_reg(all_moves))[3])`. Being a male subject increases odds of compliance with a suggested move by a factor of `r exp(coef(logistic_reg(all_moves))[4])`. 
+Exponentiating the coefficients, we can interpret the likelihoods of compliance with suggested moves as odds-ratios. We find that the female audio treatment effect increases odds of compliance with a suggested move by an infinite factor `r round(exp(coef(logistic_reg(all_moves))[2]),2)`, controlling for covariates and fixed effects. The male audio treatment effect increases odds of compliance with a suggested move by a factor of `r round(exp(coef(logistic_reg(all_moves))[3]),2)`. Being a male subject increases odds of compliance with a suggested move by a factor of `r round(exp(coef(logistic_reg(all_moves))[4]),2)`. 
 
 This model appears to reinforce the findings of the previous model, which is that audio directives are much more likely to be followed than visual directives. Female speakers has a stronger positive effect (larger odds of eliciting compliance with the suggested move directive).
 
@@ -642,7 +674,8 @@ table(all_moves$subject_id, all_moves$is_suggested_move_optimal)
 
 
 ```{r distribution of optimal moves for each subject, include=TRUE}
-hist(all_moves_agg$mean_optimal_move, main="Histogram of proportion of suggested optimal moves", xlab="Proportion of suggested optimal moves", ylab = "Frequency", breaks=50)
+hist(all_moves_agg$mean_optimal_move, main="Histogram of proportion of suggested optimal moves", 
+     xlab="Proportion of suggested optimal moves", ylab = "Frequency", breaks=50)
 ```
 
 Second, as further diagnostic check, the histograms below show the distribution of the proportion of compliance to optimal verses non-optimal suggested moves. The distribution is more right-skewed for the optimal moves than for non-optimal moves. As we would expect a priori, there is a tendency for higher rates of compliance to optimal moves than non-optimal suggested moves. 
@@ -673,11 +706,13 @@ nrow(nonoptimal_moves_agg)
 par(mfrow=c(2,1))
 
 # show distribution of compliance rates by subject
-hist(optimal_moves_agg$comply_rate, main="Histogram of compliance rates by subject for optimal moves", 
+hist(optimal_moves_agg$comply_rate, 
+     main="Histogram of compliance rates by subject for optimal moves", 
      xlab="Proportional rates of compliance", ylab = "Frequency", breaks=50)
 
 # show distribution of non-compliance rates by subject
-hist(nonoptimal_moves_agg$comply_rate, main="Histogram of compliance rates by subject for non-optimal moves", 
+hist(nonoptimal_moves_agg$comply_rate,
+     main="Histogram of compliance rates by subject for non-optimal moves", 
      xlab="Proportional rates of compliance", ylab = "Frequency", breaks=50)
 ```
 
@@ -685,8 +720,11 @@ We find the compliance to suggested optimal moves are higher across all treatmen
 
 ```{r estimate comply rates, include=TRUE}
 par(mfrow=c(1,2))
-# report compliance rates across all treatment groups 
+# report compliance rates across all treatment groups
+print("Proportional compliance rates for optimal moves")
 kable(complyratesbytreatment(dt=all_moves_optimal))
+
+print("Proportional compliance rates for non-optimal moves")
 kable(complyratesbytreatment(dt=all_moves_nonoptimal))
 ```
 
@@ -695,11 +733,15 @@ However, the estimated treatment effects are larger for the non-optimal move sug
 ```{r estimate treatment effects, include=TRUE}
 #complyratesbytreatment(dt=all_moves_optimal)
 par(mfrow=c(3,2))
-c(print('ATE for Male Treatment over optimal moves:'),round(ate_treatmentmale(dt=all_moves_optimal),3))
-c(print('ATE for Male Treatment over nonoptimal moves:'),round(ate_treatmentmale(dt=all_moves_nonoptimal),3))
+print('ATE for Male Treatment over optimal moves:')
+round(ate_treatmentmale(dt=all_moves_optimal),3)
+print('ATE for Male Treatment over nonoptimal moves:')
+round(ate_treatmentmale(dt=all_moves_nonoptimal),3)
 
-c(print('ATE for Female Treatment over optimal moves:'),round(ate_treatmentfemale(dt=all_moves_optimal),3))
-c(print('ATE for Female Treatment over nonoptimal moves:'),round(ate_treatmentfemale(dt=all_moves_nonoptimal),3))
+print('ATE for Female Treatment over optimal moves:')
+round(ate_treatmentfemale(dt=all_moves_optimal),3)
+print('ATE for Female Treatment over nonoptimal moves:')
+round(ate_treatmentfemale(dt=all_moves_nonoptimal),3)
 
 kable(ate_treatmentmale(dt=all_moves_optimal))
 kable(ate_treatmentmale(dt=all_moves_nonoptimal))
@@ -723,7 +765,8 @@ reg <- function(data){
 
 # regression of the comply rate on the assignment status with covariate adjustment for subject gender and age and interaction terms
 reg_interaction <- function(data){
-  data[,lm(comply_rate ~ as.factor(assignment_status)+gender+age+gender*as.factor(assignment_status)+age*as.factor(assignment_status))]
+  data[,lm(comply_rate ~ as.factor(assignment_status)
+           +gender+age+gender*as.factor(assignment_status)+age*as.factor(assignment_status))]
 }
 
 reg_optimal <- reg(data=optimal_moves_agg)
@@ -735,20 +778,31 @@ reg_interaction_optimal <- reg_interaction(data=optimal_moves_agg)
 # report the formatted regression results
 stargazer(reg_optimal, reg_optimal, reg_interaction_optimal, reg_interaction_optimal,
           type = 'text', 
-          se = list(robust_se(reg(data=optimal_moves_agg)), cluster_se(reg(data=optimal_moves_agg),optimal_moves_agg),robust_se(reg_interaction(data=optimal_moves_agg)), cluster_se(reg_interaction(data=optimal_moves_agg),optimal_moves_agg)),
-          add.lines = list(c('Move Type', 'Optimal', 'Optimal', 'Optimal', 'Optimal'),c('SE', 'Robust', 'Clustered', 'Robust', 'Clustered')),
+          se = list(robust_se(reg(data=optimal_moves_agg)), 
+                    cluster_se(reg(data=optimal_moves_agg),optimal_moves_agg),
+                    robust_se(reg_interaction(data=optimal_moves_agg)), 
+                    cluster_se(reg_interaction(data=optimal_moves_agg),optimal_moves_agg)),
+          add.lines = list(c('Move Type', 'Optimal', 'Optimal', 'Optimal', 'Optimal'),
+                           c('SE', 'Robust', 'Clustered', 'Robust', 'Clustered')),
           omit.stat = c('ser', 'F'),
+          no.space = TRUE,align=TRUE,table.placement="H",
           header=F)
 ```
 
 
 ```{r linear model for the nonoptimal moves subset, include=TRUE}
 # report the formatted regression results
-stargazer(reg(data=nonoptimal_moves_agg), reg(data=nonoptimal_moves_agg), reg_interaction(data=nonoptimal_moves_agg), reg_interaction(data=nonoptimal_moves_agg),
+stargazer(reg(data=nonoptimal_moves_agg), reg(data=nonoptimal_moves_agg), 
+          reg_interaction(data=nonoptimal_moves_agg), reg_interaction(data=nonoptimal_moves_agg),
           type = 'text', 
-          se = list(robust_se(reg(data=nonoptimal_moves_agg)), cluster_se(reg(data=nonoptimal_moves_agg),nonoptimal_moves_agg),robust_se(reg_interaction(data=nonoptimal_moves_agg)), cluster_se(reg_interaction(data=nonoptimal_moves_agg),nonoptimal_moves_agg)),
-          add.lines = list(c('Move Type', 'Nonoptimal', 'Nonoptimal', 'Nonoptimal', 'Nonoptimal'),c('SE', 'Robust', 'Clustered', 'Robust', 'Clustered')),
+          se = list(robust_se(reg(data=nonoptimal_moves_agg)), 
+                    cluster_se(reg(data=nonoptimal_moves_agg),nonoptimal_moves_agg),
+                    robust_se(reg_interaction(data=nonoptimal_moves_agg)), 
+                    cluster_se(reg_interaction(data=nonoptimal_moves_agg),nonoptimal_moves_agg)),
+          add.lines = list(c('Move Type', 'Nonoptimal', 'Nonoptimal', 'Nonoptimal', 'Nonoptimal'),
+                           c('SE', 'Robust', 'Clustered', 'Robust', 'Clustered')),
           omit.stat = c('ser', 'F'),
+          no.space = TRUE,align=TRUE,table.placement="H",
           header=F)
 ```
 
@@ -781,7 +835,7 @@ t_test_result_nonoptimal_tf
 t_test_result_nonoptimal_t 
 ```
 
-Consistent with the regression results, from the t-tests we observe that the treatment effect for the male voice and female voice treatments for the optimal moves are statistically different from zero with a p-value in the t-test of `r t_test_result_optimal_tm$p.value` and `r t_test_result_optimal_tf$p.value`, respectively. We observe similar effects from the t-tests for the non-optimal moves with p-values of `r t_test_result_nonoptimal_tm$p.value` and `r t_test_result_nonoptimal_tf$p.value`, respectively. The effect between the gendered voice treatments for both optimal and non-optimal moves is statistically insignificant with a p-value in the t-test of `r t_test_result_optimal_t$p.value` and `r t_test_result_nonoptimal_t$p.value`. 
+Consistent with the regression results, from the t-tests we observe that the treatment effect for the male voice and female voice treatments for the optimal moves are statistically different from zero with a p-value in the t-test of `r round(t_test_result_optimal_tm$p.value,4)` and `r round(t_test_result_optimal_tf$p.value,4)`, respectively. We observe similar effects from the t-tests for the non-optimal moves with p-values of `r round(t_test_result_nonoptimal_tm$p.value,4)` and `r round(t_test_result_nonoptimal_tf$p.value,4)`, respectively. The effect between the gendered voice treatments for both optimal and non-optimal moves is statistically insignificant with a p-value in the t-test of `r round(t_test_result_optimal_t$p.value,4)` and `r round(t_test_result_nonoptimal_t$p.value,4)`. 
 
 ### Evaluation of compliance to suggested moves based on gender of subject 
 
@@ -823,26 +877,29 @@ reg_male$cluster1se <- sqrt(diag(reg_male$vcovCL1_))
 reg_female$vcovCL1_ <- vcovCL(reg_female, cluster = all_moves_female_agg[ , subject_id])
 reg_female$cluster1se <- sqrt(diag(reg_female$vcovCL1_))
 
+# save regression equations
+reg_male <- all_moves_male_agg[,lm(comply_rate ~ as.factor(assignment_status)+age)]
+reg_female <- all_moves_female_agg[,lm(comply_rate ~ as.factor(assignment_status)+age)]
 ```
 
 
 
 ```{r report regression results, include=TRUE}
-# report the formatted regression results
-reg_male <- all_moves_male_agg[,lm(comply_rate ~ as.factor(assignment_status)+age)]
-reg_female <- all_moves_female_agg[,lm(comply_rate ~ as.factor(assignment_status)+age)]
-
 stargazer(reg_male, reg_male,reg_female,reg_female,
           type = 'text', 
-          se = list(robust_se(reg_male),cluster_se(reg_male,all_moves_male_agg),robust_se(reg_female),cluster_se(reg_female,all_moves_female_agg)),
-          add.lines = list(c('Subject Gender','Male','Male','Female','Female'),c('SE', 'Robust', 'Clustered','Robust','Clustered')),
+          se = list(robust_se(reg_male),
+                    cluster_se(reg_male,all_moves_male_agg),
+                    robust_se(reg_female),
+                    cluster_se(reg_female,all_moves_female_agg)),
+          add.lines = list(c('Subject Gender','Male','Male','Female','Female'),
+                           c('SE', 'Robust', 'Clustered','Robust','Clustered')),
           omit.stat = c('ser', 'F'),
           header=F)
 ```
 
-We find that the treatment effects of the gendered audio voices are statistically significant for the male subjects only. For the male subjects, the treatment effect from the female audio voice is `r coeftest(reg_male,reg_male$vcovHC_)[2]` with robust standard error of `r coeftest(reg_male,reg_male$vcovHC_)[2,2]`, while for the male audio voice the estimated treatment effect is `r coeftest(reg_male,reg_male$vcovHC_)[3]` with robust standard error of `r coeftest(reg_male,reg_male$vcovHC_)[3,2]`.
+We find that the treatment effects of the gendered audio voices are statistically significant for the male subjects only. For the male subjects, the treatment effect from the female audio voice is `r round(coeftest(reg_male,reg_male$vcovHC_)[2],3)` with robust standard error of `r round(coeftest(reg_male,reg_male$vcovHC_)[2,2],3)`, while for the male audio voice the estimated treatment effect is `r round(coeftest(reg_male,reg_male$vcovHC_)[3],3)` with robust standard error of `r round(coeftest(reg_male,reg_male$vcovHC_)[3,2],3)`.
 
-For the female subjects, the treatment effects are statistically insignificant. The effect from female audio voice is `r coeftest(reg_female,reg_female$vcovHC_)[2]` with robust standard error of `r coeftest(reg_female,reg_female$vcovHC_)[2,2]`, while for the male audio voice the estimated treatment effect is `r coeftest(reg_female,reg_female$vcovHC_)[3]` with robust standard error of `r coeftest(reg_female,reg_female$vcovHC_)[3,2]`.
+For the female subjects, the treatment effects are statistically insignificant. The effect from female audio voice is `r round(coeftest(reg_female,reg_female$vcovHC_)[2],3)` with robust standard error of `r round(coeftest(reg_female,reg_female$vcovHC_)[2,2],3)`, while for the male audio voice the estimated treatment effect is `r coeftest(reg_female,reg_female$vcovHC_)[3]` with robust standard error of `r round(coeftest(reg_female,reg_female$vcovHC_)[3,2],3)`.
 
 ### Evaluation of compliance to suggested moves based on order of game 
 
@@ -882,25 +939,42 @@ As a diagnostic check, we observe that the distribution of proportional complian
 # show distribution of compliance rates for each game by subject
 par(mfrow=c(3,2))
 
-hist(all_moves_game0_agg$comply_rate, main="Compliance rates by subject for Game 1", xlab="Proportion of compliance rates", ylab = "Frequency", breaks=20)
+hist(all_moves_game0_agg$comply_rate, 
+     main="Compliance rates by subject for Game 1", 
+     xlab="Proportion of compliance rates", ylab = "Frequency", breaks=20)
 
-hist(all_moves_game1_agg$comply_rate, main="Compliance rates by subject for Game 2", xlab="Proportion of compliance rates", ylab = "Frequency", breaks=20)
+hist(all_moves_game1_agg$comply_rate, 
+     main="Compliance rates by subject for Game 2", 
+     xlab="Proportion of compliance rates", ylab = "Frequency", breaks=20)
 
-hist(all_moves_game2_agg$comply_rate, main="Compliance rates by subject for Game 3", xlab="Proportion of compliance rates", ylab = "Frequency", breaks=20)
+hist(all_moves_game2_agg$comply_rate, 
+     main="Compliance rates by subject for Game 3", 
+     xlab="Proportion of compliance rates", ylab = "Frequency", breaks=20)
 
-hist(all_moves_game3_agg$comply_rate, main="Compliance rates by subject for Game 4", xlab="Proportion of compliance rates", ylab = "Frequency", breaks=20)
+hist(all_moves_game3_agg$comply_rate, 
+     main="Compliance rates by subject for Game 4",
+     xlab="Proportion of compliance rates", ylab = "Frequency", breaks=20)
 
-hist(all_moves_game4_agg$comply_rate, main="Compliance rates by subject for Game 5", xlab="Proportion of compliance rates", ylab = "Frequency", breaks=20)
+hist(all_moves_game4_agg$comply_rate, 
+     main="Compliance rates by subject for Game 5", 
+     xlab="Proportion of compliance rates", ylab = "Frequency", breaks=20)
 ```
 
 Estimating the linear regressions on aggregated data for all 5 games with clustered standard errors (clustering by subject identifier), we see that the treatment effects for the gendered audio voices are persistent across game order. We find statistically significant estimates for both gendered audio voice treatments over each game number. The exception is the treatment male audio voice effect in Game 5, which we ascribe as due to random chance. Over each game, the effect size is always larger for the female audio voice treatment.
 
 ```{r regression output for by-game models, include=TRUE}
 # report the formatted regression results for all games with clustered standard errors.
-stargazer(reg(all_moves_game0_agg), reg(all_moves_game1_agg),reg(all_moves_game2_agg),reg(all_moves_game3_agg),reg(all_moves_game4_agg),
+stargazer(reg(all_moves_game0_agg), reg(all_moves_game1_agg),
+          reg(all_moves_game2_agg),reg(all_moves_game3_agg),
+          reg(all_moves_game4_agg),
           type = 'text', 
-          se = list(cluster_se(reg(data=all_moves_game0_agg),all_moves_game0_agg),cluster_se(reg(data=all_moves_game1_agg),all_moves_game1_agg),cluster_se(reg(data=all_moves_game2_agg),all_moves_game2_agg),cluster_se(reg(data=all_moves_game3_agg),all_moves_game3_agg),cluster_se(reg(data=all_moves_game4_agg),all_moves_game4_agg)),
-          add.lines = list(c('Games','Game1','Game2','Game3','Game4','Game5'),c('SE', 'Clustered', 'Clustered','Clustered','Clustered','Clustered')),
+          se = list(cluster_se(reg(data=all_moves_game0_agg),all_moves_game0_agg),
+                    cluster_se(reg(data=all_moves_game1_agg),all_moves_game1_agg),
+                    cluster_se(reg(data=all_moves_game2_agg),all_moves_game2_agg),
+                    cluster_se(reg(data=all_moves_game3_agg),all_moves_game3_agg),
+                    cluster_se(reg(data=all_moves_game4_agg),all_moves_game4_agg)),
+          add.lines = list(c('Games','Game1','Game2','Game3','Game4','Game5'),
+                           c('SE', 'Clustered', 'Clustered','Clustered','Clustered','Clustered')),
           omit.stat = c('ser', 'F'),
           header=F)
 ```
@@ -940,11 +1014,17 @@ As a diagnostic check, we observe that the distribution of proportional complian
 # show distribution of compliance rates for each game by subject
 par(mfrow=c(3,1))
 
-hist(all_moves_move1_agg$comply_rate, main="Compliance rates by subject for Move 1", xlab="Proportion of compliance rates", ylab = "Frequency", breaks=30)
+hist(all_moves_move1_agg$comply_rate, 
+     main="Compliance rates by subject for Move 1", 
+     xlab="Proportion of compliance rates", ylab = "Frequency", breaks=30)
 
-hist(all_moves_move2_agg$comply_rate, main="Compliance rates by subject for Move 2", xlab="Proportion of compliance rates", ylab = "Frequency", breaks=30)
+hist(all_moves_move2_agg$comply_rate, 
+     main="Compliance rates by subject for Move 2", 
+     xlab="Proportion of compliance rates", ylab = "Frequency", breaks=30)
 
-hist(all_moves_move3_agg$comply_rate, main="Compliance rates by subject for Move 3", xlab="Proportion of compliance rates", ylab = "Frequency", breaks=30)
+hist(all_moves_move3_agg$comply_rate, 
+     main="Compliance rates by subject for Move 3", 
+     xlab="Proportion of compliance rates", ylab = "Frequency", breaks=30)
 
 ```
 
@@ -954,8 +1034,11 @@ Estimating the linear regressions on aggregated data for the first 3 ordered mov
 # report the formatted regression results
 stargazer(reg(all_moves_move1_agg), reg(all_moves_move2_agg),reg(all_moves_move3_agg),
           type = 'text', 
-          se = list(cluster_se(reg(all_moves_move1_agg),all_moves_move1_agg),cluster_se(reg(all_moves_move2_agg),all_moves_move2_agg),cluster_se(reg(all_moves_move3_agg),all_moves_move3_agg)),
-          add.lines = list(c('Move Order No.','Move 1','Move 2','Move 3'),c('SE', 'Clustered', 'Clustered','Clustered')),
+          se = list(cluster_se(reg(all_moves_move1_agg),all_moves_move1_agg),
+                    cluster_se(reg(all_moves_move2_agg),all_moves_move2_agg),
+                    cluster_se(reg(all_moves_move3_agg),all_moves_move3_agg)),
+          add.lines = list(c('Move Order No.','Move 1','Move 2','Move 3'),
+                           c('SE', 'Clustered', 'Clustered','Clustered')),
           omit.stat = c('ser', 'F'),
           header=F)
 ```
@@ -1004,9 +1087,9 @@ pwr_est_tf <-pwr.2p2n.test(h = effectsize_tf, n1 = n_control , n2 = n_treatfemal
 
 ```
 
-The power of our effects are  `r pwr_est_tm$power` and `r pwr_est_tf$power` for the male and female audio treatment studies, respectively.
+The power of our effects are  `r round(pwr_est_tm$power,2)*100` percent and `r round(pwr_est_tf$power,2)*100` percent for the male and female audio treatment studies, respectively.
 
-The sample sizes required to achieve 50% power for the observed effect size of the male audio voice treatment was `r pwr_tm$n` and observed effect size of the female audio voice treatment is `r pwr_tf$n`. This represents a roughly `r round(pwr_tm$n/n_treatmale,0)` and `r round(pwr_tf$n/n_treatfemale,0)` fold increase in the subject pool we actually had in our experiment.
+The sample sizes required to achieve 50% power for the observed effect size of the male audio voice treatment was `r round(pwr_tm$n,0)` and observed effect size of the female audio voice treatment is `r round(pwr_tf$n,0)`. This represents a roughly `r round(pwr_tm$n/n_treatmale,0)` and `r round(pwr_tf$n/n_treatfemale,0)` fold increase in the subject pool we actually had in our experiment.
 
 
 # Conclusions
